# minreq

./: Cargo.toml
src/: cert_pin.rs  connection.rs  lib.rs  request.rs
src/connection/: native_tls_stream.rs  rustls_stream.rs
