[package]
name = "minreq"
version = "2.14.2-alpha"
authors = ["Jens Pitkanen <jens@neon.moe>"]
description = "Simple, minimal-dependency HTTP client"
documentation = "https://docs.rs/minreq"
homepage = "https://github.com/neonmoe/minreq"
repository = "https://github.com/neonmoe/minreq"
readme = "README.md"
keywords = ["http", "https", "client", "request", "json"]
categories = ["web-programming::http-client"]
license = "ISC"
edition = "2018"

[badges]
travis-ci = { repository = "neonmoe/minreq" }
maintenance = { status = "passively-maintained" }

[dependencies]
# For the urlencoding feature:
urlencoding = { version = "2.1.0", optional = true }
# For the punycode feature:
punycode = { version = "0.4.1", optional = true }
# For the json-using-serde feature:
serde = { version = "1.0.101", optional = true }
serde_json = { version = "1.0.0", optional = true }
# For the proxy feature:
base64 = { version = "0.22", optional = true }
# For the https features:
rustls = { version = "0.23", optional = true, features = ["ring"] }
native-tls = { version = "0.2", optional = true }
log = { version = "0.4", optional = true }
# For cert pinning:
x509-parser = { version = "0.18", optional = true }
sha2 = { version = "0.10", optional = true }

[dev-dependencies]
tiny_http = "0.12"
chrono = "0.4.0"

[package.metadata.docs.rs]
features = ["json-using-serde", "proxy", "https", "punycode"]

[features]
https = ["https-rustls"]
https-rustls = ["rustls"]
https-native = ["native-tls"]
json-using-serde = ["serde", "serde_json"]
proxy = ["base64"]
cert-pin = ["x509-parser", "sha2"]

[[example]]
name = "hello"

[[example]]
name = "iterator"

[[example]]
name = "json"
required-features = ["json-using-serde"]

# vim: ft=conf
